[package]
name = "game-binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for use with wasm debug builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.12.0", features = ["trace"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

# For use with wasm release builds
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#bevy = { version = "0.11.3", features = [] }
#console_error_panic_hook = "0.1.7"
#tracing-wasm = "0.2.1"

# For use with non wasm debug builds.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking", "trace"] }
tracing-tracy = "0.10.4"
tracing-subscriber = "0.3.17"

# For use with non wasm release builds.
# [target.'cfg(not(wasm))'.dependencies]
# bevy = { version = "0.11.3", features = ["dynamic_linking"] }
#tracing-tracy = "0.10.4"
#tracing-subscriber = "0.3.17"

[dependencies]
game-library = { path = "../game-library" }
bevy-inspector-egui = "0.21.0"
leafwing-input-manager = "0.11.1"
thiserror = "1.0.50"
wasm-bindgen = "0.2.88"
tracing = { version = "0.1.40", features = ["release_max_level_off"] }
bevy_ecs = "0.12.0"
bevy_reflect = "0.12.0"

